<resources>
    <string name="app_name">Mash</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>


    <!-- Home Screen -->
    <string name="main_logo_desc">Application Main Logo</string>
    <string name="main_logo_text">Mash Fitness</string>

    <string name="homescreen_sets_title">Sets</string>
    <string name="homescreen_sets_standard">5</string>

    <string name="homescreen_timeon_title">Time On</string>
    <string name="homescreen_timeon_standard">0:30</string>

    <string name="homescreen_timeoff_title">Time Off</string>
    <string name="homescreen_timeoff_standard">0:15</string>

    <string name="workout_button_quick">Quick Mash</string>
    <string name="workout_button_custom">Custom Workout</string>
    <string name="BackgroundImage">backgroundImage</string>
    <string name="workout_mode">Workout Mode!</string>
    <string name="SetNumber" />
    <string name="TimeOnDuration" />
    <string name="TimeOffDuration" />
    <string name="ExerciseName" />
    <string name="closescreen">CloseScreen</string>
    <string name="BeginWorkout">Begin Workout!</string>
    <string name="WorkoutComplete">Workout Complete!</string>
    <string name="WellDone">Well Done!</string>
    <string name="WorkoutSummary">Workout Summary:</string>
    <string name="newMashWorkout">New Mash Workout</string>
    <string name="finishWorkout">Finish Workout</string>
    <string name="sets">Sets:</string>
    <string name="timeOn">Time On:</string>
    <string name="timeOff">Time Off:</string>
    <string name="cardio">Cardio:</string>
    <string name="endurance">Endurance:</string>
    <string name="core">Core:</string>
    <string name="input_rest">rest</string>

</resources>
